PDF-135 Mobile: Phone number country selector cut off - fixed

--- a/web/themes/custom/palette_de_fleurs/scss/pages/_checkout_order_information.scss
+++ b/web/themes/custom/palette_de_fleurs/scss/pages/_checkout_order_information.scss
@@ -171,6 +171,9 @@
       @include H3;
     }
 
+    .country-list {
+      width: 300px !important;
+    }
   }
 }
 
